[Terry N.] latest simkit, correct default proj. assys